# gift

./: .clang-format  CMakeLists.txt  LICENSE  README.md
src/: gift.c  gift.h  main.c
